# wp-support-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  eval.yml  frontend.yml
app/: __init__.py  config.py  main.py
app/api/: routes_admin.py  routes_query.py  schemas.py
app/db/: redis.py
app/ingestion/: registry.py  summary.py  tasks.py
app/llm/: anthropic.py  base.py  cache.py  circuit_breaker.py  factory.py  ollama.py  openai.py
app/processing/: chunker.py  embedder.py
app/rag/: generator.py  retriever.py  router.py  service.py
apps/: __init__.py
apps/admin/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
apps/web/: admin.html  index.html
caddy/: Caddyfile
config/: README.md
config/plugins/: alamin-ai-provider-for-minimax.yaml  alamin-ai-provider-for-opencode-zen.yaml  alamin-donation-router.yaml  author-profile-blocks.yaml  easycommerce-email-tester.yaml  easycommerce-fakerpress.yaml  elementor-kit-importer.yaml  fluent-cart-fakerpress.yaml  form-styler-for-divi.yaml  post-grid-module-for-divi.yaml  sitemon.yaml  squad-modules-for-divi.yaml  swift-menu-duplicator.yaml  warranty-cart.yaml  wc-affiliate-email-tester.yaml  wc-gocardless-payments.yaml  wc-paystack.yaml  wc-razorpay-oauth.yaml  wc-shipping-rates-invoice.yaml  wc-shipstation-integration.yaml  wp-cli-magic-login.yaml  wp-dev-toolkit.yaml  wp-pgsql-database.yaml  wp-scheduled-data-fetch.yaml
eval/: harness.py  metrics.py
tests/: __init__.py  conftest.py  test_adapters_vcr.py  test_api.py  test_chunker.py  test_config.py  test_db_integration.py  test_embedder.py  test_eval.py  test_generator.py  test_health.py  test_ingestion_tasks.py  test_llm_unit.py  test_normalize.py  test_processing_integration.py  test_providers.py  test_registry_config.py  test_retrieval_integration.py  test_retriever.py  test_streaming.py
widget/: .gitkeep  index.html  widget.js
(+132 files in other folders)
